Fix timeline flag hover spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -527,7 +527,7 @@ a {
 
     &:hover span {
       letter-spacing: 0.05rem;
-      padding-right: 1rem;
+      padding-right: 1.25rem;
     }
 
     &:hover span:after {
